--- a/index.html
+++ b/index.html
@@ -17,12 +17,52 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 
 	<!-- Javascript Files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </head>
 <body>
+    <div class="row container">
+        <div class="col s3 container right-align">
+            <h1>About Us</h1>
+        </div>
+         <div class="col s9 container left-align">
+            <div class="container data">
+                The main objective of TaskForce NITK is to make the life of students at NITK
+                easier and provide special opportunities for the students to take part in
+                administrative activities.<br>
+                It is a student initiative with the aim to aid and support the NITK Students’
+                Council in solving student issues. It is not an alternate body to the Students’
+                Council, but rather a supporting body which aims to bridge the gap between the
+                administration and the students. It is an Autonomous student body, directly
+                under the Director of the Institute.<br>
+                TaskForce NITK will comprise of eight modules, which will seek to address the
+                various issues faced by students at college and also help them stay well-
+                informed regarding the happenings on campus.<br>
+            </div>
+        </div>
+    </div>
+    <div class="container col s12">
+        <img src="images/temp.jpg" class="image">
+    </div>
+    <div class="container">
+        <h1>Modules</h1>
+        <div class="icon">
+          <ul>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/media.jpeg"></div><div class="icon-card-content center-align">MEDIA</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/content.jpg"></div><div class="icon-card-content center-align">CONTENT</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/passport.jpg"></div><div class="icon-card-content center-align">PASSPORT MELA</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/prism.jpeg"></div><div class="icon-card-content center-align">PRISM</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/virtual.jpg"></div><div class="icon-card-content center-align">VCR</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/website.jpg"></div><div class="icon-card-content center-align">WEBSITE</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/alumini.jpeg"></div><div class="icon-card-content center-align">ALUMINI</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/ain1.jpg"></div><div class="icon-card-content center-align">AIN</div></div></li>
+          </ul>
+         </div>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col s12 tskf-header-font tskf-header-size">Team</div>
