--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <div class="navbar-fixed">
         <nav class="white">
             <div class="nav-wrapper container">
-                <a href="#!" class="brand-logo black-text">TaskForce</a>
+                <img src="images/taskforce_logo.png" class="logo-tskf" />
+                <a href="#!" class="brand-logo black-text">&nbsp;&nbsp;&nbsp;TaskForce</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger black-text"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="#about-us-section">ABOUT US</a></li>
