home and module page added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 </head>
 <body>
+	
     <div class="navbar-fixed">
         <nav class="white">
             <div class="nav-wrapper container">
@@ -71,12 +72,11 @@
             </div>
         </div>
     </div>
-
-    <div class="row container" id="about-us-section">
-        <div class="col s3 container right-align">
+    <div class="row container">
+        <div class="col s12 m4 container left-align">
             <h1>About Us</h1>
         </div>
-         <div class="col s9 container left-align">
+         <div class="col s12 m8 container left-align">
             <div class="container data">
                 The main objective of TaskForce NITK is to make the life of students at NITK
                 easier and provide special opportunities for the students to take part in
@@ -95,7 +95,7 @@
     <div class="container col s12">
         <img src="images/temp.jpg" class="image">
     </div>
-    <div class="container" id="modules-section">
+    <div class="container">
         <h1>Modules</h1>
         <div class="icon">
           <ul>
@@ -110,7 +110,7 @@
           </ul>
          </div>
     </div>
-    <div class="container" id="team-section">
+    <div class="container">
         <div class="row">
             <div class="col s12 tskf-header-font tskf-header-size">Team</div>
         </div>
