More fixes and UI changes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </p>
                     </div>
                     <div class="col l12 m6 offset-m2">
-                        <a class="waves-effect waves-light btn-large landing-know-more-btn white" href="#">I want to know more</a>
+                        <a class="waves-effect btn-large landing-know-more-btn white" href="#">I want to know more</a>
                     </div>
                 </div>
             </div>
