--- a/module.html
+++ b/module.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="center-align">
-        <h1>Title</h1>
+        <h1><span class="myellow">Title</span></h1>
     </div>
     <div class="container col s12">
         <img src="images/temp1.jpeg" class="image"><br>
