--- a/module.html
+++ b/module.html
@@ -24,6 +24,7 @@
 
 </head>
 <body>
+    <div id="header" class="navbar-fixed"></div>
     <div class="center-align">
         <h1>Title</h1>
     </div>
@@ -43,4 +44,10 @@
         various issues faced by students at college and also help them stay well-
         informed regarding the happenings on campus.<br>
     </div>
+    <footer class="page-footer grey lighten-2 black-text">
+    </footer>
+    <script type="text/javascript">
+        $('#header').load('header.html');
+        $('footer').load('footer.html');
+    </script>
 </body>
