Add header links

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
         </div>
     </div>
-    <div class="row container">
+    <div class="row container" id="about-us-section">
         <div class="col s12 m4 l4 left-align">
             <h1><span class="myellow">About Us</span></h1>
         </div>
@@ -76,7 +76,7 @@
     <div class="col s12">
         <img src="images/temp.jpg" class="image">
     </div>
-    <div class="container">
+    <div class="container" id="modules-section">
         <h1><span class="myellow">Modules</span></h1>
         <div class="icon">
           <ul>
@@ -91,7 +91,7 @@
           </ul>
          </div>
     </div>
-    <div class="container">
+    <div class="container" id="team-section">
         <div class="row">
             <div class="col s12 tskf-header-font tskf-header-size">
                 <span class="myellow">Team</span>
