Fixed Team Images

--- a/index.html
+++ b/index.html
@@ -99,14 +99,71 @@
         <h1><span class="myellow">Modules</span></h1>
         <div class="icon">
           <ul>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/media.jpeg"></div><div class="icon-card-content center-align">MEDIA</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/content.jpg"></div><div class="icon-card-content center-align">CONTENT</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/passport.jpg"></div><div class="icon-card-content center-align">PASSPORT MELA</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/prism.jpeg"></div><div class="icon-card-content center-align">PRISM</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/virtual.jpg"></div><div class="icon-card-content center-align">VCR</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/website.jpg"></div><div class="icon-card-content center-align">WEBSITE</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/alumini.jpeg"></div><div class="icon-card-content center-align">ALUMINI</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/ain1.jpg"></div><div class="icon-card-content center-align">AIN</div></div></li>
+            <li>
+            	<div class="icon-card z-depth-5 ">
+            	<div class="icon-card-image center-align">
+            		<img class="icon-image" src="images/media.jpeg">
+            	</div>
+            		<div class="icon-card-content center-align">MEDIA
+            		</div>
+            	</div>
+            </li>
+            <li>
+            	<div class="icon-card z-depth-5">
+            		<div class="icon-card-image center-align">
+            			<img class="icon-image" src="images/content.jpg">
+            		</div>
+            		<div class="icon-card-content center-align">CONTENT</div>
+            	</div>
+            </li>
+            <li>
+            	<div class="icon-card z-depth-5">
+            		<div class="icon-card-image center-align">
+            			<img class="icon-image" style="padding:0%" src="images/passport.jpg">
+            		</div>
+            		<div class="icon-card-content center-align">PASSPORT MELA</div>
+            	</div>
+            </li>
+            <li>
+            	<div class="icon-card z-depth-5">
+            		<div class="icon-card-image center-align">
+            			<img class="icon-image" src="images/prism.jpeg">
+            		</div>
+            		<div class="icon-card-content center-align">PRISM</div>
+            	</div>
+            </li>
+            <li>
+            	<div class="icon-card z-depth-5">
+            		<div class="icon-card-image center-align">
+            			<img class="icon-image" src="images/virtual.jpg">
+            		</div>
+            		<div class="icon-card-content center-align">VCR</div>
+            	</div>
+            </li>
+            <li>
+            	<div class="icon-card z-depth-5">
+            		<div class="icon-card-image center-align">
+            			<img class="icon-image" src="images/website.jpg">
+            		</div>
+            		<div class="icon-card-content center-align">WEBSITE</div>
+            	</div>
+            </li>
+            <li>
+            	<div class="icon-card z-depth-5">
+            		<div class="icon-card-image center-align">
+            			<img class="icon-image" src="images/alumini.jpeg">
+            		</div>
+            		<div class="icon-card-content center-align">ALUMINI</div>
+            	</div>
+            </li>
+            <li>
+            	<div class="icon-card z-depth-5">
+            		<div class="icon-card-image center-align">
+            			<img class="icon-image" src="images/ain1.jpg">
+            		</div>
+            		<div class="icon-card-content center-align">AIN</div>
+            	</div>
+            </li>
           </ul>
          </div>
     </div>
@@ -115,6 +172,38 @@
             <div class="col s12 tskf-header-font tskf-header-size">
                 <span class="myellow">Team</span>
             </div>
+        </div>
+        <div class="container">
+        	<div class="row">
+        		<div class="center tskf-team-container col s12 l4 m6">
+        			<img class="responsive-img circle tskf-team-img" src="https://placem.at/people?w=350&h=350">
+        			<h5 class="tskf-header-font tskf-thicken ">Team member</h5>
+        			<h6 class="tskf-descp">Description</h6>
+         		</div>
+
+         		<div class="center tskf-team-container col s12 l4 m6">
+        			<img class="responsive-img circle tskf-team-img" src="https://placem.at/people?w=350&h=350">
+        			<h5 class="tskf-header-font tskf-thicken ">Team member</h5>
+        			<h6 class="tskf-descp">Description</h6>
+         		</div>
+         		<div class="center tskf-team-container col s12 l4 m6">
+        			<img class="responsive-img circle tskf-team-img" src="https://placem.at/people?w=350&h=350">
+        			<h5 class="tskf-header-font tskf-thicken ">Team member</h5>
+        			<h6 class="tskf-descp">Description</h6>
+         		</div>
+         		<div class="center tskf-team-container col s12 l4 m6">
+        			<img class="responsive-img circle tskf-team-img" src="https://placem.at/people?w=350&h=350">
+        			<h5 class="tskf-header-font tskf-thicken ">Team member</h5>
+        			<h6 class="tskf-descp">Description</h6>
+         		</div>
+         		<div class="center tskf-team-container col s12 l4 m6">
+        			<img class="responsive-img circle tskf-team-img" src="https://placem.at/people?w=350&h=350">
+        			<h5 class="tskf-header-font tskf-thicken ">Team member</h5>
+        			<h6 class="tskf-descp">Description</h6>
+         		</div>
+
+        	</div>
+        	
         </div>
         <div class="row tskf-team-row"></div>
     </div>
@@ -137,6 +226,6 @@
     </footer>
     <!-- JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-    <script src="js/index.js" type="text/javascript"></script>
+    <!-- <script src="js/index.js" type="text/javascript"></script> -->
 </body>
 </html>
