Changed modules icons to vectors

--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
         <h1><span class="myellow">Modules</span></h1>
         <div class="icon">
           <ul>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/media.jpeg"></div><div class="icon-card-content center-align">MEDIA</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/content.jpg"></div><div class="icon-card-content center-align">CONTENT</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/passport.jpg"></div><div class="icon-card-content center-align">PASSPORT MELA</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/media.svg"></div><div class="icon-card-content center-align">MEDIA</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/content.svg"></div><div class="icon-card-content center-align">CONTENT</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/passport.svg"></div><div class="icon-card-content center-align">PASSPORT MELA</div></div></li>
             <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/prism.jpeg"></div><div class="icon-card-content center-align">PRISM</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/virtual.jpg"></div><div class="icon-card-content center-align">VCR</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/website.jpg"></div><div class="icon-card-content center-align">WEBSITE</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/alumini.jpeg"></div><div class="icon-card-content center-align">ALUMINI</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/ain1.jpg"></div><div class="icon-card-content center-align">AIN</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/virtual.png"></div><div class="icon-card-content center-align">VCR</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/website.svg"></div><div class="icon-card-content center-align">WEBSITE</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/alumni.svg"></div><div class="icon-card-content center-align">ALUMINI</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/ain.svg"></div><div class="icon-card-content center-align">AIN</div></div></li>
           </ul>
          </div>
     </div>
