Add all module pages with content

--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
         <h1><span class="myellow">Modules</span></h1>
         <div class="icon">
           <ul>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/media.jpeg"></div><div class="icon-card-content center-align">MEDIA</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/content.jpg"></div><div class="icon-card-content center-align">CONTENT</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/passport.jpg"></div><div class="icon-card-content center-align">PASSPORT MELA</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/prism.jpeg"></div><div class="icon-card-content center-align">PRISM</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/virtual.jpg"></div><div class="icon-card-content center-align">VCR</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/website.jpg"></div><div class="icon-card-content center-align">WEBSITE</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/alumini.jpeg"></div><div class="icon-card-content center-align">ALUMINI</div></div></li>
-            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/ain1.jpg"></div><div class="icon-card-content center-align">AIN</div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/media.jpeg"></div><div class="icon-card-content center-align"><a href="media.html">MEDIA</a></div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/content.jpg"></div><div class="icon-card-content center-align"><a href="content.html">CONTENT</a></div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/passport.jpg"></div><div class="icon-card-content center-align"><a href="passport_mela.html">PASSPORT MELA</a></div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/prism.jpeg"></div><div class="icon-card-content center-align"><a href="prism.html">PRISM</a></div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/virtual.jpg"></div><div class="icon-card-content center-align"><a href="vcr.html">VCR</a></div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/website.jpg"></div><div class="icon-card-content center-align"><a href="website.html">WEBSITE</a></div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/alumini.jpeg"></div><div class="icon-card-content center-align"><a href="alumni.html">ALUMNI</a></div></div></li>
+            <li><div class="icon-card z-depth-5"><div class="icon-card-image center-align"><img src="images/ain1.jpg"></div><div class="icon-card-content center-align"><a href="ain.html">AIN</a></div></div></li>
           </ul>
          </div>
     </div>
