Fixed Module Alignment

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
     <div class="container" id="modules-section">
         <h1><span class="myellow">Modules</span></h1>
-        <div class="icon">
+        <div class="icon center">
           <ul>
             <li>
             	<div class="icon-card z-depth-5 ">
@@ -100,9 +100,9 @@
             <li>
             	<div class="icon-card z-depth-5">
             		<div class="icon-card-image center-align">
-            			<img class="icon-image" style="padding:4%" src="images/passport.jpg">
+            			<img class="icon-image" src="images/passport.jpg">
             		</div>
-            		<div class="icon-card-content center-align">PASSPORT MELA</div>
+            		<div class="icon-card-content center-align" style="font-size:25px;">PASSPORT MELA</div>
             	</div>
             </li>
             <li>
