Fixed Module Alignment

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    
 
 	<!-- Javascript Files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -56,10 +56,10 @@
     </div>
     <div class="row container" id="about-us-section">
         <div class="col s12 m4 l4 left-align">
-            <h1><span class="myellow" style="font-family: 'Poppins',sans serif;">About Us</span></h1>
+            <h1><span class="myellow">About Us</span></h1>
         </div>
          <div class="col s12 m8 l8 left-align">
-            <div class="text" style="font-family: 'Poppins',sans serif;">
+            <div class="text">
                 The main objective of TaskForce NITK is to make the life of students at NITK
                 easier and provide special opportunities for the students to take part in
                 administrative activities.<br>
