--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    
+
 
 	<!-- Javascript Files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -80,71 +80,87 @@
     <div class="container" id="modules-section">
         <h1><span class="myellow">Modules</span></h1>
         <div class="icon center">
-          <ul>
+          <ul class="ul-module">
 
             <li>
+            	<a href="media.html">
             	<div class="icon-card z-depth-5 ">
             	<div class="icon-card-image center-align">
             		<img class="icon-image" src="images/media.jpeg">
             	</div>
-            		<div class="icon-card-content center-align"><a href="media.html">MEDIA</a>
+            		<div class="icon-card-content center-align">MEDIA
             		</div>
             	</div>
+            </a>
             </li>
             <li>
+            	<a href="content.html">
             	<div class="icon-card z-depth-5">
             		<div class="icon-card-image center-align">
             			<img class="icon-image" src="images/content.jpg">
             		</div>
-            		<div class="icon-card-content center-align"><a href="content.html">CONTENT</a></div>
+            		<div class="icon-card-content center-align">CONTENT</div>
             	</div>
+            </a>
             </li>
             <li>
+            	<a href="passport_mela.html">
             	<div class="icon-card z-depth-5">
             		<div class="icon-card-image center-align">
             			<img class="icon-image" src="images/passport.jpg">
             		</div>
-            		<div class="icon-card-content center-align" style="font-size:25px;"><a href="passport_mela.html">PASSPORT MELA</a></div>
+            		<div class="icon-card-content center-align" style="font-size:25px;">PASSPORT MELA</div>
             	</div>
+            </a>
             </li>
             <li>
+            	<a href="prism.html">
             	<div class="icon-card z-depth-5">
             		<div class="icon-card-image center-align">
             			<img class="icon-image" src="images/prism.jpeg">
             		</div>
-            		<div class="icon-card-content center-align"><a href="prism.html">PRISM</a></div>
+            		<div class="icon-card-content center-align">PRISM</div>
             	</div>
+            </a>
             </li>
             <li>
+
+            	<a href="vcr.html">
             	<div class="icon-card z-depth-5">
             		<div class="icon-card-image center-align">
             			<img class="icon-image" src="images/virtual.jpg">
             		</div>
-            		<div class="icon-card-content center-align"><a href="vcr.html">VCR</a></div>
+            		<div class="icon-card-content center-align">VCR</div>
             	</div>
+            </a>
             </li>
             <li>
+            	<a href="website.html">
             	<div class="icon-card z-depth-5">
             		<div class="icon-card-image center-align">
             			<img class="icon-image" src="images/website.jpg">
             		</div>
-            		<div class="icon-card-content center-align"><a href="website.html">WEBSITE</a></div>
+            		<div class="icon-card-content center-align">WEBSITE</div>
             	</div>
+            </a>
             </li>
             <li>
+            	<a href="alumni.html">
             	<div class="icon-card z-depth-5">
             		<div class="icon-card-image center-align">
             			<img class="icon-image" src="images/alumini.jpeg">
             		</div>
-            		<div class="icon-card-content center-align"><a href="alumni.html">ALUMNI</a></div>
+            		<div class="icon-card-content center-align">ALUMNI</div>
             	</div>
+            </a>
             </li>
             <li>
+            	<a href="ain.html">
             	<div class="icon-card z-depth-5">
             		<div class="icon-card-image center-align">
             			<img class="icon-image" src="images/ain1.jpg">
             		</div>
-            		<div class="icon-card-content center-align"><a href="ain.html">AIN</a></div>
+            		<div class="icon-card-content center-align">AIN</div>
             	</div>
             </li>
 
